--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   background-color: #f1f6f1; /* daisy-white */
 }
